k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk052-stock-api
  namespace: skala-practice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk052-stock-api
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8081'
        prometheus.io/path: '/actuator/prometheus'
        update: 4ccd5c1abcf382fe0137692b33f28895
      labels:
        app: sk052-stock-api
    spec:
      serviceAccountName: default
      containers:
      - name: webserver
        image: amdp-registry.skala-ai.com/skala25a/sk052-webserver:2.0.0
        imagePullPolicy: Always
